test/domains/diten/multitypeIndex.good
multitypeIndex.chpl:7: error: idxType varies among domain's dimensions
